# demo-server/swagger_server/controllers/farmer_controller.py
@@ -4,10 +4,13 @@ import six
 from swagger_server.models.inline_response2003 import InlineResponse2003  # noqa: E501
 from swagger_server.models.plant_id import PlantId  # noqa: E501
 from swagger_server import util
+
+
 import mockdb.db as db
 from typing import Dict
 
 plantStorage : Dict[int, int] = {}
+collectedPIDs : Dict[int, bool] = {}
 
 def get_plant_storage(plant_type):  # noqa: E501
     """Returns the numer of Plants of plant_type that were reaped.
@@ -22,7 +25,7 @@ def get_plant_storage(plant_type):  # noqa: E501
     if not plantStorage.get(plant_type):
         plantStorage[plant_type] = 0
 
-    return plantStorage[plant_type]
+    return InlineResponse2003(plantStorage[plant_type])
 
 
 def notify_farmer(plantId=None, isrequest=True):  # noqa: E501
@@ -40,7 +43,9 @@ def notify_farmer(plantId=None, isrequest=True):  # noqa: E501
 
     if not isinstance(plantId, PlantId):
         plantId = PlantId(plantId)
-        
+
+    collectedPIDs[plantId.plant_id] = True
+
     ptype = db.getPlantType(plantId)
     if not plantStorage.get(ptype):
         plantStorage[ptype] = 1
@@ -48,5 +53,16 @@ def notify_farmer(plantId=None, isrequest=True):  # noqa: E501
     else:
         plantStorage[ptype] += 1 
 
-    
 
+def get_plant_storage_by_id(plantId):  # noqa: E501
+    """Returns the numer of Plants of plant_type that were reaped.
+
+     # noqa: E501
+
+    :param plantId: The plant type to query
+    :type plantId: int
+
+    :rtype: None
+    """
+    # Throws an error if key is not there, should invoke 404
+    collectedPIDs[plantId]
