# demo-server/swagger_server/swagger/swagger.yaml
@@ -146,11 +146,31 @@ paths:
           schema:
             $ref: "#/definitions/inline_response_200_3"
       x-swagger-router-controller: "swagger_server.controllers.farmer_controller"
+  /farmer/hasplant/{plantId}:
+    get:
+      tags:
+      - "farmer"
+      summary: "Returns the numer of Plants of plant_type that were reaped."
+      operationId: "get_plant_storage_by_id"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "plantId"
+        in: "path"
+        description: "The plant type to query"
+        required: true
+        type: "integer"
+      responses:
+        "200":
+          description: "Plant is there"
+        "404":
+          description: "No such Plant"
+      x-swagger-router-controller: "swagger_server.controllers.farmer_controller"
 definitions:
   Plant:
     type: "object"
     properties:
-      id:
+      plantId:
         type: "integer"
         format: "int64"
       plant_type:
@@ -158,7 +178,7 @@ definitions:
         format: "int64"
     description: "The Plant."
     example:
-      id: 0
+      plantId: 0
       plant_type: 6
   inline_response_200:
     type: "object"
@@ -168,23 +188,31 @@ definitions:
         example: 42
     example:
       seeds: 42
+  inline_response_200_1_foo:
+    type: "object"
+    required:
+    - "bar"
+    properties:
+      bar:
+        type: "string"
+        example: "bar"
+    example:
+      bar: "bar"
   inline_response_200_1:
-    type: object
+    type: "object"
+    required:
+    - "foo"
+    - "season"
     properties:
       season:
-        type: string
-        example: spring
+        type: "string"
+        example: "spring"
       foo:
-        #required:
-         # - bar
-        type: object
-        properties:
-          bar:
-            type: string
-            example: "bar"
-    required:
-      - season
-      - foo
+        $ref: "#/definitions/inline_response_200_1_foo"
+    example:
+      foo:
+        bar: "bar"
+      season: "spring"
   inline_response_200_2:
     type: "object"
     properties:
